# shifyclone

./: .gitignore  Dockerfile  README.md  agents.sh  docker-compose.yml  init.sh  manage.py  pyproject.toml
resume_roaster/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
resume_roaster/bot/: admin.py  apps.py  bot.py  models.py  tasks.py  views.py
resume_roaster/bot/management/commands/: run_bot.py
resume_roaster/bot/migrations/: 0001_initial.py
resume_roaster/bot/templates/bot/: tma.html
