[tool.poetry]
name = "resume-roaster-bot"
version = "0.1.0"
description = "Telegram bot for roasting resumes using LLM"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "resume_roaster"}]

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.0"
aiogram = "^3.13.1"
celery = "^5.4.0"
kombu = "^5.4.0"
python-dotenv = "^1.0.1"
httpx = "^0.27.2"
pypdf2 = "^3.0.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

